package co.edu.unicauca.piedraazul.model;

public enum UserRole {
    ADMIN,
    AGENDADOR,
    MEDICO,
    PACIENTE
}