@startuml Clases_GestionMedicos
title Sistema Piedra Azul - Diagrama de Clases
title Componente: Gestión de Médicos

skinparam classAttributeIconSize 0
left to right direction

interface IMedicoService {
  +registrarMedico(...) : Medico
  +listarTodos() : List
  +buscarPorId(id: Long) : Medico
}

class MedicoServiceImpl {
  -medicoRepository : MedicoRepository
  -userRepository : UserRepository
}

class MedicoRepository
class UserRepository

class Medico {
  id : Long
  nombreCompleto : String
  especialidad : String
  intervaloMinutos : Integer
}

class User {
  id : Long
  username : String
  password : String
}

enum UserRole {
  ADMIN
  AGENDADOR
  MEDICO
}

enum UserStatus {
  ACTIVE
  INACTIVE
}

MedicoServiceImpl ..|> IMedicoService
MedicoServiceImpl --> MedicoRepository
MedicoServiceImpl --> UserRepository
Medico "1" --> "1" User : tiene acceso
User --> UserRole
User --> UserStatus

@enduml
